syntax = "proto3";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "util.concurrent.core";
option java_outer_classname = "DConcurrent";
option objc_class_prefix = "LZZ";

package dconcurrent;

service DConcurrentServer {
  rpc ResetStat(DStatus) returns(google.protobuf.Any) {}
  rpc GetStat(google.protobuf.Any) returns(DStatus) {}
  rpc Run(DObject) returns(DObject) {}
  rpc Call(DObject) returns(DObject) {}
}
message DObject{
  google.protobuf.Any className = 1;
  google.protobuf.Any metaParam = 2;
  google.protobuf.Any metaParamClass = 3;
}

message DStatus{
    int32 runCount = 1;
    int32 callCount = 2;
}
